bug fixes for inward.java proforma.jsp subscriber invoices

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -630,8 +630,42 @@ list_agent_prm = select t1.id\
 #--------------------------------------------------------------------------
 get_last_invoice = SELECT invoiceNumber FROM invoice where YEAR(invoiceCreationDate)=YEAR(CURDATE()) ORDER BY id DESC LIMIT 1
 
-
 invoice_insert = insert into invoice ( invoiceNumber, subscriptionID, invoiceCreationDate ) values ( ?, ?, ? )
+
+get_invoice_detail = SELECT t1.id as inwardID, \
+                            t1.inwardNumber, \
+                            t2.id as subscriptionID, \
+                            t2.subscriberID, \
+                            t3.subscriberAddress, \
+                            t4.invoiceNumber, \
+                            t4.invoiceCreationDate, \
+                            sum(t6.rate * t5.copies)  as subscriptionTotal \
+                                    from inward t1, subscription t2, subscriber t3, invoice t4, \
+                                    subscriptiondetails t5, subscription_rates t6 \
+                            where t1.inwardNumber = ? \
+                                and t2.inwardID = t1.id \
+                                and t3.id = t2.subscriberID \
+                                and t4.subscriptionID = t2.id \
+                                and t5.subscriptionID = t2.id \
+                                and t5.journalPriceGroupID = t6.id \
+
+
+search_subscriber_invoice = select  t5.invoiceNumber, \
+                                    DATE_FORMAT(t5.invoiceCreationDate,'%d/%m/%Y') as invoiceCreationDate, \
+                                    t2.id as subscriptionID, \
+                                    sum(t3.copies * t4.rate) as invoiceAmount \
+                            from  subscriber t1, \
+                                subscription t2, \
+                                subscriptiondetails t3, \
+                                subscription_rates t4, \
+                                invoice t5 \
+                            where t1.id=t2.subscriberID \
+                                and t3.subscriptionID=t2.id \
+                                and t3.journalPriceGroupID=t4.id \
+                                and t2.id=t5.subscriptionId \
+                                and t1.subscriberNumber=? \
+                            group by t5.invoiceNumber, t5.invoiceCreationDate,t2.id \
+                            order by invoiceCreationDate desc \
 
 
 #--------------------------------------------------------------------------
