mailing list infrastructure and other minor changes

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -25,6 +25,10 @@ return_reason = select return_reason from inward_return_reasons order by id
 
 language = select language from languages order by id
 
+month = select month from months order by id
+
+journalname = select journalName from journals order by id
+
 ! End Generic ------------------------------------------------------
 
 
@@ -670,4 +674,25 @@ search_subscriber_invoice = select  t5.invoiceNumber, \
 
 #--------------------------------------------------------------------------
 # End Reports
+#--------------------------------------------------------------------------
+
+#--------------------------------------------------------------------------
+# Start Mailing List
+#--------------------------------------------------------------------------
+
+getissues = Select issueNumber from issues where issues.issueNumber <= (select issues from journals where journalName = ?)
+
+generateml = Select \
+subscriber.subscriberNumber, subscriber.subscriberName, subscriber.subscriberAddress, subscriber.city, subscriber.district,  \
+subscriber.state, subscriber.country, subscriber.pincode, subscriber.subtype, journals.journalCode, journals.journalName, subscriptiondetails.copies  \
+from \
+subscriber, subscription, journals, journal_groups, subscriptiondetails, journal_group_contents \
+where \
+subscriber.id = subscription.subscriberID and subscription.id = subscriptiondetails.subscriptionID \
+and journal_groups.id = journal_group_contents.journalGroupId and journal_group_contents.journalId = journals.id \
+and subscriptiondetails.journalGroupID = journal_groups.id and journals.journalName = ? \
+and subscriptiondetails.endYear <= ? and subscriptiondetails.startYear >= ?
+
+#--------------------------------------------------------------------------
+# End Mailing List
 #--------------------------------------------------------------------------
