--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -339,7 +339,7 @@ update_inward = update inward set \
                     where inwardNumber = ?
 
 # The where/and clause is formed dynamically in the searchInward in IAS.Model.inward.java
-search_inward = select inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
+search_inwards = select t1.id as inwardID, inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
                 t1.inwardPurpose as inwardPurposeID from inward t1 \
                 left join cities t2 on t1.city = t2.id \
                 left join inward_purpose t3 on t1.inwardPurpose = t3.id \
@@ -487,6 +487,7 @@ get_subscription_detail_by_subscription_id =    select t2.id \
                                 , t3.journalGroupName as journalGroupName \
                                 , t2.journalGroupID \
                                 , t2.startYear \
+                                , t2.startMonth \
                                 , t2.endYear \
                                 , t2.copies \
                                 , (t2.copies * t4.rate) as total \
@@ -513,8 +514,8 @@ insert_subscription = insert into subscription(subscriberID,inwardID,subscriptio
 #                            values (?, ?, ?, ?, ?, ?, ?)
 
 insert_subscription_detail = insert into subscriptiondetails ( \
-                            subscriptionID,journalGroupID,journalPriceGroupID,copies,startYear,endYear) \
-                            values (?, ?, ?, ?, ?, ?)
+                            subscriptionID,journalGroupID,journalPriceGroupID,copies,startYear,startMonth,endYear) \
+                            values (?, ?, ?, ?, ?, ?, ?)
 
 
 delete_subscription = update subscription set active = false where id=?
@@ -548,7 +549,7 @@ get_subscription_details_for_inward = select t1.id as subscriptionid, t4.journal
                                             and t5.inwardNumber = ? \
                                       group by subscriptionid, t4.journalName, t2.startYear, t2.endYear, t2.copies
 
-update_subscription_detail =    update subscriptiondetails set startYear=?, endYear=?, \
+update_subscription_detail =    update subscriptiondetails set startYear=?, startMonth=?, endYear=?, \
                                 journalPriceGroupID=? , copies=?, active=? \
                                 where id=?;
 
