--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -346,12 +346,12 @@ search_inwards = select t1.id as inwardID, inwardNumber, t4.subscriberNumber as 
                 left join subscriber t4 on t1.subscriberId = t4.id \
                 where inwardNumber is not NULL
 
-search_subscriber_inward = select inwardNumber, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t1.amount, \
+search_subscriber_inward = select t1.id, inwardNumber, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t1.amount, \
                 t3.purpose as inwardPurpose, t5.currency, DATE_FORMAT(ackDate,'%d/%m/%Y') as ackDate, t1.completed, t1.chequeDDReturn \
                 from inward t1 left join inward_purpose t3 on t1.inwardPurpose = t3.id \
                 left join subscriber t4 on t1.subscriberID = t4.id \
                 left join currency t5 on t1.currency = t5.id \
-                where t4.subscriberNumber = ?
+                where t4.subscriberNumber = ? order by t1.id desc
 
 
 search_inward_count = select count(*) from inward t1 \
@@ -670,8 +670,27 @@ search_subscriber_invoice = select  t5.invoiceNumber, \
                                 and t2.id=t5.subscriptionId \
                                 and t1.subscriberNumber=? \
                             group by t5.invoiceNumber, t5.invoiceCreationDate,t2.id \
-                            order by invoiceCreationDate desc \
+                            order by subscriptionID desc \
 
+
+get_invoice_detail_usng_invno =  Select  t5.id, \
+                                 DATE_FORMAT(t5.invoiceCreationDate,'%d/%m/%Y') as invoiceCreationDate, \
+                                 t2.id as subscriptionID, \
+                                 t6.inwardNumber, \
+                                 t1.subscriberAddress, \
+                                 sum(t3.copies * t4.rate) as subscriptionTotal \
+                                        from  subscriber t1, \
+                                              subscription t2, \
+                                              subscriptiondetails t3, \
+                                              subscription_rates t4, \
+                                              invoice t5, \
+                                              inward t6 \
+                                            where t1.id=t2.subscriberID \
+                                                and t3.subscriptionID=t2.id \
+                                                and t3.journalPriceGroupID=t4.id \
+                                                and t2.id=t5.subscriptionId \
+                                                and t6.id=t2.inwardID \
+                                                and t5.invoiceNumber = ?
 
 #--------------------------------------------------------------------------
 # End Reports
