--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
@@ -39,6 +38,12 @@ file.reference.commons-beanutils-bean-collections-1.8.3.jar=lib\\commons-beanuti
 file.reference.commons-beanutils-core-1.8.3.jar=lib\\commons-beanutils-core-1.8.3.jar
 file.reference.commons-dbutils-1.4.jar=lib\\commons-dbutils-1.4.jar
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.itext-xtra-5.2.1-javadoc.jar=lib/itext-5.2.1/itext-xtra-5.2.1-javadoc.jar
+file.reference.itext-xtra-5.2.1-sources.jar=lib/itext-5.2.1/itext-xtra-5.2.1-sources.jar
+file.reference.itext-xtra-5.2.1.jar=lib/itext-5.2.1/itext-xtra-5.2.1.jar
+file.reference.itextpdf-5.2.1-javadoc.jar=lib/itext-5.2.1/itextpdf-5.2.1-javadoc.jar
+file.reference.itextpdf-5.2.1-sources.jar=lib/itext-5.2.1/itextpdf-5.2.1-sources.jar
+file.reference.itextpdf-5.2.1.jar=lib/itext-5.2.1/itextpdf-5.2.1.jar
 file.reference.jstl-api-1.2.jar=lib\\jstl-api-1.2.jar
 file.reference.jstl-impl-1.2.jar=lib\\jstl-impl-1.2.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
@@ -51,7 +56,7 @@ includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.7.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.18-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.7.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.18-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -67,7 +72,13 @@ javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}:\
     ${file.reference.yuicompressor-2.4.7.jar}:\
-    ${file.reference.YUIAnt.jar}
+    ${file.reference.YUIAnt.jar}:\
+    ${file.reference.itextpdf-5.2.1.jar}:\
+    ${file.reference.itext-xtra-5.2.1-javadoc.jar}:\
+    ${file.reference.itext-xtra-5.2.1-sources.jar}:\
+    ${file.reference.itext-xtra-5.2.1.jar}:\
+    ${file.reference.itextpdf-5.2.1-javadoc.jar}:\
+    ${file.reference.itextpdf-5.2.1-sources.jar}
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
