--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -702,17 +702,49 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
 
 getissues = Select issueNumber from issues where issues.issueNumber <= (select issues from journals where journalName = ?)
 
-generateml = Select \
-subscriber.subscriberNumber, subscriber.subscriberName, subscriber.subscriberAddress, subscriber.city, subscriber.district,  \
-subscriber.state, subscriber.country, subscriber.pincode, subscriber.subtype, journals.journalCode, journals.journalName, subscriptiondetails.copies  \
-from \
-subscriber, subscription, journals, journal_groups, subscriptiondetails, journal_group_contents \
-where \
-subscriber.id = subscription.subscriberID and subscription.id = subscriptiondetails.subscriptionID \
-and journal_groups.id = journal_group_contents.journalGroupId and journal_group_contents.journalId = journals.id \
-and subscriptiondetails.journalGroupID = journal_groups.id and journals.journalName = ? \
-and subscriptiondetails.endYear <= ? and subscriptiondetails.startYear >= ?
+select_generateml = Select \
+                    subscriber.id, subscription.id, subscriptiondetails.id, subscriber.subscriberNumber, subscriber.subscriberName, \
+                    subscriber.subscriberAddress, cities.city, districts.district, states.state, countries.country, \
+                    subscriber.pincode, subscriber_type.subtypecode, journals.journalCode, journals.id, subscriptiondetails.copies \
+                    from \
+                    subscriber, subscription, journals, journal_groups, subscriptiondetails, journal_group_contents, \
+                    cities, states, countries, districts, subscriber_type \
+                    where subscription.subscriberID = subscriber.id and subscriptiondetails.subscriptionID = subscription.id \
+                    and journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
+                    and subscriptiondetails.journalGroupID = journal_groups.id and subscriber.city = cities.id and \
+                    subscriber.district = districts.id and subscriber.state = states.id and subscriber.country = countries.id \
+                    and subscriber.subtype = subscriber_type.id \
+                    and journals.journalName = ? and subscriptiondetails.endYear <= ? and subscriptiondetails.startYear >= ?
 
+insert_ml = insert into mailing_list (journalId, issue, `year`, month, mlDate) values \
+            ((select journalId from journals where journals.journalName = ?),?,?,?,?)
+
+Insert_mldtl = insert into mailing_list_detail (mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, \
+                journalCode, copies, subscriberNumber, subscriberName, address, city, state, country, pincode, issue, month, \
+                `year`, subtypecode) values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+
+search_ml =select journalId, issue, `year`, month, mlDate FROM mailing_list where journalId = ? AND issue = ? AND `year` = ? \
+            AND month = ? and bilid = ' '
+
+get_ml =select journalId, issue, `year`, month, mlDate FROM mailing_list where bilid = ' ' 
+
+search_mldtl = select mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, journalCode, copies, \
+            subscriberNumber, subscriberName, address, city, state, country, pincode, issue, month, `year`, subtypecode \
+            FROM mailing_list_detail where journalId = ? and month = ? AND `year` = ? and bilid = ' '
 #--------------------------------------------------------------------------
 # End Mailing List
+#--------------------------------------------------------------------------
+
+#--------------------------------------------------------------------------
+# Start Back Issue List
+#--------------------------------------------------------------------------
+subscribernumber = select subscriber.subscriberNumber from subscriber, back_issue_list \
+                    where subscriber.id = back_issue_list.subscriberId and back_issue_list.bil_generated = ' '
+
+generatebil = Select t1.subscriberNumber, t1.subscriberName, t1.subscriberAddress, t1.city, t1.district,  \
+               t1.state, t1.country, t1.pincode, t1.subtype, journals.journalCode, journals.journalName, subscriptiondetails.copies \
+            from subscriber t1, back_issue_list t2 \
+            where t1.id = t2.subscriberId and t2.bil_generated = ' '
+#--------------------------------------------------------------------------
+# End Back Issue List
 #--------------------------------------------------------------------------
