Mailing List except print and month check

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -703,9 +703,11 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
 getissues = Select issueNumber from issues where issues.issueNumber <= (select issues from journals where journalName = ?)
 
 select_generateml = Select \
-                    subscriber.id, subscription.id, subscriptiondetails.id, subscriber.subscriberNumber, subscriber.subscriberName, \
+                    subscriber.id, subscription.id, subscriptiondetails.id, journals.id, journals.journalCode, \
+                    subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, subscriber.department, subscriber.institution, \
                     subscriber.subscriberAddress, cities.city, districts.district, states.state, countries.country, \
-                    subscriber.pincode, subscriber_type.subtypecode, journals.journalCode, journals.id, subscriptiondetails.copies \
+                    subscriber.pincode, subscriptiondetails.copies, subscriptiondetails.startYear, subscriptiondetails.startMonth, \
+                    subscriptiondetails.endYear, subscriptiondetails.endMonth \
                     from \
                     subscriber, subscription, journals, journal_groups, subscriptiondetails, journal_group_contents, \
                     cities, states, countries, districts, subscriber_type \
@@ -714,23 +716,33 @@ select_generateml = Select \
                     and subscriptiondetails.journalGroupID = journal_groups.id and subscriber.city = cities.id and \
                     subscriber.district = districts.id and subscriber.state = states.id and subscriber.country = countries.id \
                     and subscriber.subtype = subscriber_type.id \
-                    and journals.journalName = ? and subscriptiondetails.endYear <= ? and subscriptiondetails.startYear >= ?
+                    and journals.journalName = ? and subscriptiondetails.endYear <= ? and subscriptiondetails.startYear >= ? 
 
-insert_ml = insert into mailing_list (journalId, issue, `year`, month, mlDate) values \
-            ((select journalId from journals where journals.journalName = ?),?,?,?,?)
+insert_ml = insert into mailing_list (journalId, issue, `year`, month) values \
+            ((select id from journals where journals.journalName = ?),?,?,(select id from months where months.month = ?))
 
-Insert_mldtl = insert into mailing_list_detail (mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, \
-                journalCode, copies, subscriberNumber, subscriberName, address, city, state, country, pincode, issue, month, \
-                `year`, subtypecode) values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+insert_mldtl = insert into mailing_list_detail (mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, \
+                journalId, journalCode, subtypecode, subscriberNumber, subscriberName, department, institution, address, city, district, state, \
+                country, pincode, copies, startYear, startMonth, endYear, endMonth, issue, month, `year`) values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
+                (select id from months where months.month = ?), ?)
 
 search_ml =select journalId, issue, `year`, month, mlDate FROM mailing_list where journalId = ? AND issue = ? AND `year` = ? \
             AND month = ? and bilid = ' '
 
-get_ml =select journalId, issue, `year`, month, mlDate FROM mailing_list where bilid = ' ' 
+get_ml =select id, journalId, issue, `year`, month, mlDate FROM mailing_list where \
+                journalId =  (select id from journals where journals.journalName = ?) \
+        and issue = ?
 
-search_mldtl = select mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, journalCode, copies, \
-            subscriberNumber, subscriberName, address, city, state, country, pincode, issue, month, `year`, subtypecode \
-            FROM mailing_list_detail where journalId = ? and month = ? AND `year` = ? and bilid = ' '
+check_ml =select id FROM mailing_list where \
+                journalId =  (select id from journals where journals.journalName = ?) \
+                and issue = ?
+
+search_mldtl = select id, journalCode, subtypecode, subscriberNumber, subscriberName, department , institution, \
+                address, city, district, state, country, pincode, copies, issue, month, `year`, startYear, startMonth, endYear, endMonth \
+                FROM mailing_list_detail where mailinglistid = ?
+
+get_ml_id = select id from mailing_list where journalId = (select id from journals where journals.journalName = ?) and \
+             issue = ? and `year` = ? and month = (select id from months where months.month = ?)
 #--------------------------------------------------------------------------
 # End Mailing List
 #--------------------------------------------------------------------------
