back Issue list except print

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -715,7 +715,7 @@ select_generateml = Select \
                     and journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
                     and subscriptiondetails.journalGroupID = journal_groups.id and subscriber.city = cities.id and \
                     subscriber.district = districts.id and subscriber.state = states.id and subscriber.country = countries.id \
-                    and subscriber.subtype = subscriber_type.id \
+                    and subscriber.subtype = subscriber_type.id and subscriptiondetails.active = '1' \
                     and journals.journalName = ? and subscriptiondetails.endYear <= ? and subscriptiondetails.startYear >= ? 
 
 insert_ml = insert into mailing_list (journalId, issue, `year`, month) values \
@@ -750,13 +750,59 @@ get_ml_id = select id from mailing_list where journalId = (select id from journa
 #--------------------------------------------------------------------------
 # Start Back Issue List
 #--------------------------------------------------------------------------
-subscribernumber = select subscriber.subscriberNumber from subscriber, back_issue_list \
-                    where subscriber.id = back_issue_list.subscriberId and back_issue_list.bil_generated = ' '
+subscribernumber = select subscriber.subscriberNumber from subscriber, back_issue_list, subscription, subscriptiondetails \
+                    where back_issue_list.subscriptiondetailId = subscriptiondetails.id and back_issue_list.bil_generated = ' ' \
+                    and subscriptiondetails.subscriptionID = subscription.id and subscription.subscriberID = subscriber.id
 
-generatebil = Select t1.subscriberNumber, t1.subscriberName, t1.subscriberAddress, t1.city, t1.district,  \
-               t1.state, t1.country, t1.pincode, t1.subtype, journals.journalCode, journals.journalName, subscriptiondetails.copies \
-            from subscriber t1, back_issue_list t2 \
-            where t1.id = t2.subscriberId and t2.bil_generated = ' '
+subscribernumberbil = select subscriber.subscriberNumber from subscriber, back_issue_list, subscription, subscriptiondetails \
+                    where back_issue_list.subscriptiondetailId = subscriptiondetails.id and back_issue_list.bil_generated = 'X' \
+                    and subscriptiondetails.subscriptionID = subscription.id and subscription.subscriberID = subscriber.id
+
+generate_bil = select \
+                mailing_list.id, subscriber.id, subscription.id, subscriptiondetails.id, journals.id, \
+                journals.journalCode, subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, \
+                subscriber.department, subscriber.institution, subscriber.subscriberAddress, cities.city , districts.district, \
+                states.state, countries.country, subscriber.pincode, back_issue_list.copies, \
+                subscriptiondetails.startYear, subscriptiondetails.startMonth, subscriptiondetails.endYear, subscriptiondetails.endMonth, \
+                back_issue_list.issue, back_issue_list.month, back_issue_list.`year`, back_issue_list.Id \
+                FROM \
+                back_issue_list, mailing_list, subscriber, subscription, journals, journal_groups, subscriptiondetails, journal_group_contents, \
+                cities, states, countries, districts, subscriber_type \
+                where \
+                back_issue_list.`year` = mailing_list.`year` and back_issue_list.issue = mailing_list.issue \
+                and back_issue_list.issue = mailing_list.issue and back_issue_list.month = mailing_list.month \
+                and back_issue_list.bil_generated = ' ' and back_issue_list.subscriptiondetailId = subscriptiondetails.id \
+                and subscription.subscriberID = subscriber.id and subscriptiondetails.subscriptionID = subscription.id \
+                and journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
+                and subscriptiondetails.journalGroupID = journal_groups.id and subscriber.city = cities.id and subscriber.district = districts.id \
+                and subscriber.state = states.id and subscriber.country = countries.id and subscriber.subtype = subscriber_type.id \
+                and subscriptiondetails.active = '1' and subscriber.subscriberNumber = ?
+
+
+insert_mldtl_bil = insert into mailing_list_detail \
+                    ( mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, journalCode, \
+                    subtypecode, subscriberNumber, subscriberName, department, institution, address, city, district, \
+                    state, country, pincode, copies, startYear, startMonth, endYear, endMonth, issue, month, \
+                    `year`, bilid, bildate) \
+                    VALUES \
+                    ( ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
+                    ?, ?, ?, ? )
+
+update_bil = update back_issue_list SET bil_generated = 'x' WHERE Id = ?  
+
+search_bil = select \
+            mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
+            mailing_list_detail.subscriberName, mailing_list_detail.department, \
+            mailing_list_detail.institution, mailing_list_detail.address, mailing_list_detail.city, mailing_list_detail.district, \
+            mailing_list_detail.state, mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, \
+            mailing_list_detail.startYear, mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.issue, \
+            mailing_list_detail.endMonth, mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate \
+            FROM \
+            mailing_list_detail, subscriptiondetails \
+            where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
+            and  mailing_list_detail.startYear >= subscriptiondetails.startYear and subscriberNumber = ? \
+            and bilid <> ' ' group by bildate
+           
 #--------------------------------------------------------------------------
 # End Back Issue List
 #--------------------------------------------------------------------------
