fixes for bug 117 to 119

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -481,7 +481,6 @@ get_subscription_for_subscriber =   select  t8.id, \
                                                 ) as t5 \
                                         where t5.id=t6.subscriptionID \
                                             and t6.journalPriceGroupID = t7.id \
-                                            and t6.active=true \
                                             group by t5.id, t5.inwardNumber, t5.amount \
                                             order by t5.id desc \
                                     )\
@@ -491,29 +490,38 @@ get_subscription_for_subscriber =   select  t8.id, \
                                    order by t8.id desc
 
 
-get_subscription_info_by_id =   select  t1.id,\
+get_subscription_info_by_id =   select t6.id,\
+                                    t6.subscriberName,\
+                                    t6.inwardNumber,\
+                                    sum(t6.amount + COALESCE(t8.amount,0)) as amount,\
+                                    sum(t6.subscriptionTotal) as subscriptionTotal,\
+                                    (sum(t6.amount + COALESCE(t8.amount,0)) - sum(t6.subscriptionTotal)) as balance,\
+                                    t6.remarks,\
+                                    t6.subscriberNumber \
+                                from \
+                                ( \
+                                select  t1.id,\
                                         t3.subscriberName,\
                                         t2.inwardNumber,\
-                                        ((t5.rate * t4.copies) - t2.amount - sum(COALESCE(t7.amount,0))) as balance,\
+                                        ((t5.rate * t4.copies) - t2.amount) as balance,\
                                         (t5.rate * t4.copies)  as subscriptionTotal,\
                                         t1.remarks,\
-                                        (t2.amount + sum(COALESCE(t7.amount,0))) as amount,\
+                                        t2.amount,\
                                         t3.subscriberNumber \
                                 from  subscription t1,\
                                     inward t2,\
                                     subscriber t3,\
                                     subscriptiondetails t4,\
-                                    subscription_rates t5,\
-                                    payment t6,\
-                                    inward t7 \
+                                    subscription_rates t5 \
                                 where t1.inwardID = t2.id \
                                     and t1.subscriberID = t3.id \
                                     and t4.subscriptionID = t1.id \
                                     and t4.journalPriceGroupID = t5.id \
-                                    and t1.id=t6.subscriptionID \
-                                    and t6.inwardID = t7.id \
                                     and t4.active=true \
-                                    and t1.id = ?
+                                    and t1.id = ? \
+                                ) t6  left join payment t7 on t6.id = t7.subscriptionID \
+                                    left join inward t8 on t7.inwardID = t8.id \
+                                    group by t6.id, t6.subscriberName, t6.inwardNumber, t6.subscriberNumber
 
 get_subscription_detail_by_subscription_id =    select t2.id \
                                 , t3.journalGroupName as journalGroupName \
