Missing issue list - UI changes

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -897,3 +897,25 @@ search_bil = select \
 #--------------------------------------------------------------------------
 # End Back Issue List
 #--------------------------------------------------------------------------
+
+# -------------------------------------------------------------------------
+#Reminders
+#--------------------------------------------------------------------------
+search_reminders_subscriber = select subscriber.id, subscription.id, \
+                    subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, subscriber.department, \
+                    subscriber.institution, subscriber.subscriberAddress, cities.city, districts.district, states.state, \
+                    countries.country, subscriber.pincode, subscriber.email \
+                    from \
+                    reminders, subscriber, subscription, cities, states, countries, districts, subscriber_type \
+                    where \
+                    subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
+                    and subscriber.city = cities.id and subscriber.district = districts.id and subscriber.state = states.id \
+                    and subscriber.country = countries.id and subscriber.subtype = subscriber_type.id \
+                    and year(reminders.reminderDate)= year(curdate()) \
+                     and reminders.reminderType = ? and reminders.medium = ?
+
+serch_journals_subscription =
+
+#------------------------------------------------------------------------------
+#End Reminders
+#------------------------------------------------------------------------------
