print inward cheque return as PDF.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,6 +50,7 @@ file.reference.jstl-impl-1.2.jar=lib\\jstl-impl-1.2.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
 file.reference.mail.jar=lib/javamail-1.4.4/mail.jar
+file.reference.simple-java-mail-2.0.jar=lib\\simple-java-mail-2.0.jar
 file.reference.smtp.jar=lib/javamail-1.4.4/smtp.jar
 file.reference.YUIAnt.jar=lib\\YUIAnt.jar
 file.reference.yuicompressor-2.4.7.jar=lib\\yuicompressor-2.4.7.jar
@@ -79,7 +80,8 @@ javac.classpath=\
     ${file.reference.itext-xtra-5.2.1-sources.jar}:\
     ${file.reference.itext-xtra-5.2.1.jar}:\
     ${file.reference.itextpdf-5.2.1-javadoc.jar}:\
-    ${file.reference.itextpdf-5.2.1-sources.jar}
+    ${file.reference.itextpdf-5.2.1-sources.jar}:\
+    ${file.reference.simple-java-mail-2.0.jar}
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
