Email and print for inward chk return and inward acknowledgment

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -441,7 +441,7 @@ update_subscriber = update subscriber set \
                 where subscriberNumber = ?
 
 search_subscriber = select subscriberNumber, subscriberName, department, t3.country, t4.state, \
-                t2.city as city, pincode \
+                t2.city as city, pincode, email \
                 from subscriber t1 \
                 left join cities t2 on t1.city = t2.id \
                 left join countries t3 on t1.country = t3.id \
@@ -587,7 +587,7 @@ get_subscription_details_for_inward = select t1.id as subscriptionid, t4.journal
                                             and t3.journalID = t4.id \
                                             and t1.inwardID = t5.id \
                                             and t5.inwardNumber = ? \
-                                      group by subscriptionid, t4.journalName, t2.startYear, t2.endYear, t2.copies
+                                      group by subscriptionid, t4.journalName
 
 update_subscription_detail =    update subscriptiondetails set startYear=?, startMonth=?, endYear=?, \
                                 journalPriceGroupID=? , copies=?, active=? \
